--- a/rslpopup.html
+++ b/rslpopup.html
@@ -77,7 +77,7 @@
 <body>
   <div class="container">
     <h1>Welcome to RSL的世界</h1>
-    <p class="welcome-text">这是我的第一个谷歌插件</p>
+    <p class="welcome-text">这是我的谷歌tools</p>
     <div>
       <button class="button" id="changeColor">更改背景色</button>
       <button class="button" id="Screenshot">截图</button>
