--- a/rslpopup.html
+++ b/rslpopup.html
@@ -148,7 +148,7 @@
     </div>
     <!-- 添加气泡菜单 -->
     <div class="popup-menu" id="screenshotMenu">
-      <button id="fullPage">整页截图</button>
+      <button id="domPage">选择dom截图</button>
       <button id="visibleArea">可视区域截图</button>
       <button id="selectArea">选择区域截图</button>
     </div>
