feat: dom base64 + 图片区分

--- a/rslpopup.html
+++ b/rslpopup.html
@@ -138,12 +138,12 @@
     <div class="format-selector">
       <select id="imageFormat">
         <option value="png">PNG</option>
-        <option value="jpeg">JPEG</option>
-        <option value="webp">WebP</option>
+        <option value="jpeg" disabled>JPEG</option>
+        <option value="webp" disabled>WebP</option>
       </select>
       <select id="imgexportFormat">
-        <option value="base">base64</option>
-        <option value="jpeg">图片</option>
+        <option value="img">图片</option>
+        <option value="base64">base64</option>
       </select>
     </div>
     <!-- 添加气泡菜单 -->
